src/objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>DependentWOLI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent WOLI</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Dependent Task</relationshipLabel>
        <relationshipName>Work_Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DirectToCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct To Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisasterRecovery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disaster Recovery?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <formula>CASE(Warranty__c, &quot;YR&quot;, &quot;ZCPA&quot;, &quot;Z1&quot;, &quot;ZWAR&quot;,&quot;K1&quot;,&quot;ZWAR&quot;,&quot;C1&quot;,&apos;&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <label>ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EarliestAppointmentTime__c</fullName>
        <description>Appointment Finish agreed with customer</description>
        <label>Earliest Appointment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EarlyStart__c</fullName>
        <label>Early Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enabled_Survey_in_Click__c</fullName>
        <label>Enabled Survey in Click</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Actual End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EstimateLabor__c</fullName>
        <label>Estimate Labor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimateMaterialCost__c</fullName>
        <label>Estimate Material Cost</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatePartCost__c</fullName>
        <label>Estimate Part Cost</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimateTotalCost__c</fullName>
        <label>Estimate Total Cost</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimate_Quantity__c</fullName>
        <description>Estimated quantity used for parts and service materials</description>
        <label>Estimate Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimate_Work_Quarters__c</fullName>
        <description>show estimated work quarters</description>
        <label>Estimate Work Quarters</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExcludedEngineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Excluded Engineer</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Work Order Line Items (Excluded Engineer)</relationshipLabel>
        <relationshipName>Work_Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExecutingEngineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to indicated by Click which engineer has executed the Task or which engineeers Parts have been used, missing, required.</description>
        <inlineHelpText>Engineer that performed the job.</inlineHelpText>
        <label>Executing Engineer</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Work Order Line Items (Executing Engineer)</relationshipLabel>
        <relationshipName>ExecutingEngineerWorkOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExecutingTeamNumber__c</fullName>
        <formula>IF(ISBLANK(WorkOrder.Route_Number__c),
ExecutingEngineer__r.TeamNumber__c, 
WorkOrder.ExecutingEngineer__r.TeamNumber__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executing Team Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutingTeam__c</fullName>
        <formula>IF(ISBLANK(WorkOrder.Route_Number__c),
ExecutingEngineer__r.Team__c, 
WorkOrder.ExecutingEngineer__r.Team__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executing Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executing_Engineer_First_Name__c</fullName>
        <formula>IF(ISBLANK(WorkOrder.Route_Number__c),
ExecutingEngineer__r.EmployeeFirstName__c,
WorkOrder.ExecutingEngineer__r.EmployeeFirstName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executing Engineer First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executing_Engineer_Last_Name__c</fullName>
        <formula>IF(ISBLANK(WorkOrder.Route_Number__c),
ExecutingEngineer__r.EmployeeLastName__c,
WorkOrder.ExecutingEngineer__r.EmployeeLastName__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executing Engineer Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpDelivDate__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalCompletionNote__c</fullName>
        <label>External Completion Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalMovement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Movement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FaultCode__c</fullName>
        <label>Fault Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FaultLocationCategory__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D01</fullName>
                    <label>D01 - Housing</label>
                </value>
                <value>
                    <fullName>D02</fullName>
                    <label>D02 - Door</label>
                </value>
                <value>
                    <fullName>D03</fullName>
                    <label>D03 - Door Hinge</label>
                </value>
                <value>
                    <fullName>D04</fullName>
                    <label>D04 - Door Lock</label>
                </value>
                <value>
                    <fullName>D05</fullName>
                    <label>D05 - Door Switch / Sensor</label>
                </value>
                <value>
                    <fullName>D06</fullName>
                    <label>D06 - Cooling Compartment</label>
                </value>
                <value>
                    <fullName>D07</fullName>
                    <label>D07 - Drip Tray / Drip Plate</label>
                </value>
                <value>
                    <fullName>D08</fullName>
                    <label>D08 - Wastebucket</label>
                </value>
                <value>
                    <fullName>D09</fullName>
                    <label>D09 - Selection Buttons</label>
                </value>
                <value>
                    <fullName>D10</fullName>
                    <label>D10 - Cup Sensor</label>
                </value>
                <value>
                    <fullName>D11</fullName>
                    <label>D11 - Cup Dispensing</label>
                </value>
                <value>
                    <fullName>D12</fullName>
                    <label>D12 - Cup Magazine</label>
                </value>
                <value>
                    <fullName>D13</fullName>
                    <label>D13 - Branch Pipe</label>
                </value>
                <value>
                    <fullName>D14</fullName>
                    <label>D14 - Drum</label>
                </value>
                <value>
                    <fullName>D15</fullName>
                    <label>D15 - Motor (Drum)</label>
                </value>
                <value>
                    <fullName>D16</fullName>
                    <label>D16 - Helix</label>
                </value>
                <value>
                    <fullName>D17</fullName>
                    <label>D17 - Motor (Helix)</label>
                </value>
                <value>
                    <fullName>D18</fullName>
                    <label>D18 - Shafts</label>
                </value>
                <value>
                    <fullName>D19</fullName>
                    <label>D19 - Stirrer Dispenser</label>
                </value>
                <value>
                    <fullName>D20</fullName>
                    <label>D20 - Cup Heater</label>
                </value>
                <value>
                    <fullName>D21</fullName>
                    <label>D21 - Basestand / Cabinet</label>
                </value>
                <value>
                    <fullName>D22</fullName>
                    <label>D22 - Cup Dispenser Basestand</label>
                </value>
                <value>
                    <fullName>D23</fullName>
                    <label>D23 - Cooling Filter</label>
                </value>
                <value>
                    <fullName>D24</fullName>
                    <label>D24 - Condensor / Evaporator</label>
                </value>
                <value>
                    <fullName>E01</fullName>
                    <label>E01 - Fuse / Fuseholder</label>
                </value>
                <value>
                    <fullName>E02</fullName>
                    <label>E02 - Mains / Transformer</label>
                </value>
                <value>
                    <fullName>E03</fullName>
                    <label>E03 - Main Switch</label>
                </value>
                <value>
                    <fullName>E04</fullName>
                    <label>E04 - Power Supply PCB</label>
                </value>
                <value>
                    <fullName>E05</fullName>
                    <label>E05 - Fan Electronics</label>
                </value>
                <value>
                    <fullName>E06</fullName>
                    <label>E06 - Fan Cooling</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FaultConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[KTS-1475]: This is a physical asset option</description>
        <label>Machine Option</label>
        <referenceTo>PhysicalAsset__c</referenceTo>
        <relationshipLabel>Work Order Line Items (Fault Configuration)</relationshipLabel>
        <relationshipName>PhyAssetWorkOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FaultLocationCategory__c</fullName>
        <label>Fault Location Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                    <label>Door / Housing</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Electronics</label>
                </value>
                <value>
                    <fullName>W</fullName>
                    <label>Water</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>Brewing</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>Ingredient / Dosing</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>Payment / Telemetry</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Non Machine</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FilterChangeDate__c</fullName>
        <label>Filter Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FirstRoutesalesVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that it is the first routesales visit.</description>
        <inlineHelpText>This field indicates that it is the first routesales visit.</inlineHelpText>
        <label>First Routesales Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FixedCostReady__c</fullName>
        <defaultValue>false</defaultValue>
        <description>False if no fixed cost info has been generated, true fixed cost info has been generated</description>
        <label>FixedCostReady</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>This indicates the floor the machine needs to be placed.</description>
        <label>Floor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfillment Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GdsmvmntInterfacehasrun__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When check the integration log has been created, and it prevents the re-triggering of the interface.</description>
        <label>Gdsmvmnt_Interfacehasrun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupingIndicator__c</fullName>
        <description>KTS-1867: Round Trip Grouping for sales triggered cases</description>
        <label>Grouping Indicator</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasQuotingSignature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Quoting Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasSignature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HeaderBillingText__c</fullName>
        <description>Used for Billing of Work Orders interface to SAP</description>
        <formula>&quot;SERVICE DATE: &quot; + TEXT(DATEVALUE(StartDate__c)) + &apos;; &apos; +
&quot;SERVICES: &quot; + TEXT(WorkOrderType__c) + &apos;; &apos; + 
&quot;OUR REFERENCE: &quot; + JDELineItemNumber__c + &quot;_&quot; + Case__r.CaseNumber + &apos;; &apos; +
&quot;MACHINE TYPE AND SERIAL NUMBER: &quot; + PhysicalAsset__r.ProductDescription__c + &quot;_&quot; + PhysicalAsset__r.UniqueNumber__c + &apos;; &apos; +
&quot;MACHINE LOCATION: &quot; + PhysicalAsset__r.Building__c + &quot;_&quot; + PhysicalAsset__r.Floor__c + &quot;_&quot; + PhysicalAsset__r.Area__c + &apos;; &apos; +
&quot;CUSTOMER CONTACT: &quot; + ContactName__c + &apos;; &apos; +
&quot;NOTES: &quot; + ExternalCompletionNote__c</formula>
        <label>Header Billing Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoursUoM__c</fullName>
        <label>Hours (UoM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IgnoreCalendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InJeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provided by Click when the job is closed and for some reason the task was set in Jeopardy without involvement from SF.</description>
        <inlineHelpText>If true,  the task was set in Jeopardy by ClickSoftware</inlineHelpText>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludesWaterfilterCoverage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether the order line item of the machine contains waterfilter coverage in order to define which should be first after.</description>
        <label>Includes Waterfilter Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InitialActivationDate__c</fullName>
        <label>Initial Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Installation_Date_S40__c</fullName>
        <description>TS is  stamped by the Workflow : Set Installation Scheduled Date   for Process builder logic to sen t out S40 installation  date notices</description>
        <label>Installation Date S40</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InternalCompletionNote__c</fullName>
        <description>Internal Completion Note</description>
        <label>Review Needed Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InternalOrderSAP__c</fullName>
        <description>FD 1237 Internal order number coming from SAP</description>
        <externalId>true</externalId>
        <label>Internal Order SAP</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntervalWTSUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Placeholder for when interval WTS is updated via machine action WOLI (part of case closure bug testing)</description>
        <label>Interval WTS Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntervalWTS__c</fullName>
        <label>Interval WTS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCoffeeRunning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Coffee Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFirstTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An indicator to flag that the record is a first task</description>
        <label>First Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLabour__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Labour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLinkedWithOrder__c</fullName>
        <description>Tick checkbox if criteria = TRUE</description>
        <formula>AND(
ISBLANK(ParentWorkOrderLineItemId ),
NOT(ISBLANK(OrderLineItem__c )),
NOT(ISBLANK(OrderLineItem__r.Apttus_Config2__AssetLineItemId__c  )) 
)</formula>
        <label>Is Linked With Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReadyToSummarize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a flag when a dummy service material is received from click, to start a generation of task summary and link to case (see TS_CreateCaseReportFile_2)</description>
        <inlineHelpText>Used to flag if all task information from Click has been completely received. (Used by PB TS_SendEmailOnCompletedTask, and APEX TS_CreateCaseReportFile_2 )</inlineHelpText>
        <label>IsReadyToSummarize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReturnNeededTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to indicate that a woli record has parent return needed task</description>
        <label>Is Return Needed Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Additional_Service_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Additional Service Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_WorkOrder_Billling_Required__c</fullName>
        <formula>ISPICKVAL(WorkOrderLineItemType__c, &apos;Task&apos;) &amp;&amp;
(ISPICKVAL(WorkOrderType__c , &apos;S10&apos;) ||
 ISPICKVAL(WorkOrderType__c , &apos;S30&apos;) ||
 ISPICKVAL(WorkOrderType__c , &apos;S31&apos;) ||
 ISPICKVAL(WorkOrderType__c , &apos;S32&apos;) ||
 ISPICKVAL(WorkOrderType__c , &apos;S42&apos;) ||
 ISPICKVAL(WorkOrderType__c , &apos;S52&apos;) ||
 ISPICKVAL(WorkOrderType__c , &apos;S53&apos;)
) &amp;&amp;
ISBLANK(OrderHeaderSAPId__c) 

/* Removed S40 &amp; S51 ALM 5297
Feb. 22, 2019 */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is WorkOrder Billling Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JDECrockeryVolumeSize__c</fullName>
        <description>This indicates the volume size of JDE crockery in case there is no consumption model contract.</description>
        <label>JDE Crockery Volume Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDELineItemNumber__c</fullName>
        <externalId>true</externalId>
        <label>JDE Line Item Number</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Labor_Cost__c</fullName>
        <description>the actual labor cost</description>
        <label>Labor Cost</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastTelemetryDate__c</fullName>
        <label>Last Telemetry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastTelemetryStatus__c</fullName>
        <label>Last Telemetry Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastVisitatCustomer__c</fullName>
        <description>Salesforce will populate this field on calculation of the work order line item. It represents the last time the machine was visited. It will, therefore, be populated with the last visit date specified on the asset. The asset will be updated by logic from the WOLI</description>
        <label>Last Visit at Customer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastWTSDate__c</fullName>
        <label>Last WTS Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LatestAppointmentTime__c</fullName>
        <description>Appointment Start agreed with customer</description>
        <label>Latest Appointment Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeaveMachineAtCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leave Machine At Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoadID__c</fullName>
        <description>This field indicates the unique ID of the line item. This will need to be pre-fixed field with PICKUP-{18 digit ID of the Work Order Trigger Line Item}</description>
        <externalId>true</externalId>
        <label>Load ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationName__c</fullName>
        <description>Name of the Account Location - ie JDE Utrecht</description>
        <formula>AccountLocation__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MachineCalibrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Machine Calibrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MachineCare__c</fullName>
        <description>Indication of the Type of Contract for Machine Care used in TS and Operating</description>
        <label>Machine Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_MachineCare</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MachineNotes__c</fullName>
        <label>Machine Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MachineOrder__c</fullName>
        <label>Machine Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Machine_Customer_Reference__c</fullName>
        <formula>PhysicalAsset__r.CustomerReferenceNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Machine Customer Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Location__c</fullName>
        <formula>PhysicalAsset__r.Building__c + &quot; | &quot; +  PhysicalAsset__r.Floor__c  + &quot; | &quot; +   PhysicalAsset__r.Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Machine Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Name__c</fullName>
        <formula>PhysicalAsset__r.ProductDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Machine Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Number__c</fullName>
        <formula>PhysicalAsset__r.UniqueNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Machine Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Account_Location_Indicators__c</fullName>
        <description>Manual Scheduling due to Account Location Requirements:

04.06.2018 : Marvin Gatchalian added OR criteria below:
        AccountLocation__r.Schedule_Preventive_Maintenance__c
        Case__r.ScheduleManually__c,
        NOT(Case__r.Click__c)</description>
        <formula>IF( 
	NOT(OR(ISPICKVAL(WorkOrderType__c,&apos;S20&apos;), ISPICKVAL(WorkOrderType__c,&apos;S21&apos;), ISPICKVAL(WorkOrderType__c,&apos;S22&apos;))), 

	OR( 
		AccountLocation__r.Upfront_Call_Needed__c, 
		AccountLocation__r.Cannot_Accommodate_Large_Truck__c, 
		AccountLocation__r.Custom_Service_Hours__c, 
		AND( 
			AccountLocation__r.Schedule_Preventive_Maintenance__c, 
			ISPICKVAL(Case__r.SubType__c, &apos;S30&apos;) 
			), 
		Case__r.ScheduleManually__c, 
		NOT(Case__r.Click__c) 
		)	
	, 
	
	false	
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Manual Scheduling due to Account Location and Case Requirements</inlineHelpText>
        <label>Manual Account Location Indicators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaterialCost__c</fullName>
        <description>Cost of Product</description>
        <label>Material Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeterMissingonContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The counter is  configured on the machine but not stated in the contract. THis wil ltell SAP HANA that it will be an extra work order line.</description>
        <label>Counter Missing on Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MissingPartsSAPSalesOrder__c</fullName>
        <label>Missing Parts SAP Sales Order</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MissingReason__c</fullName>
        <description>Indicating the reason of missing part</description>
        <label>Missing Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MothBall__c</fullName>
        <description>Date the Machine was found in Mothball condition and was not in use, will be populated onto the Physical Asset to not recreate new Tasks as long as the condition is applicable.</description>
        <label>MothBall</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MovementType__c</fullName>
        <description>Type of WO movement</description>
        <label>Movement Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Movement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Movement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEN_Performed_Date__c</fullName>
        <label>NEN Performed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NEN_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NEN Performed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPG_Source__c</fullName>
        <description>indicator where the OPG task was created (MCO/Daily)</description>
        <label>OPG Source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_247Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Derived from the Account Location  information to indicate that the customer is also using Coffee machines during the weekend and holidays</description>
        <label>24/7 Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OP_AverageFreeConsumptions__c</fullName>
        <description>Operating - Field coming from the Counter Reading Object</description>
        <label>Average Free Consumptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_AveragePaidConsumptions__c</fullName>
        <description>Operating - Field coming from the Counter Reading Object</description>
        <label>Average Paid Consumptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_CancelationReasonCustomer__c</fullName>
        <description>TS Operating: allows Operator to cancel all Tasks for all Machines at a Customer. All the related task under the same Customer/ Accoutn will be indicated with the same reason of this picklist.</description>
        <label>Cancelation Reason (Customer)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Customer Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OP_CancelationReasonMachine__c</fullName>
        <label>Cancelation Reason (Machine)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mothball</fullName>
                </value>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Machine issue</fullName>
                </value>
                <value>
                    <fullName>Customer issue</fullName>
                </value>
                <value>
                    <fullName>Not reachable</fullName>
                </value>
                <value>
                    <fullName>EoD Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OP_ConsumerPrice__c</fullName>
        <description>Indication of the price of a unit that was consumed for this counter</description>
        <label>Consumer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OP_ConsumptionGroup__c</fullName>
        <description>Operating - Field coming from the Counter Reading Object</description>
        <label>Consumption Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_CounterSequence__c</fullName>
        <description>Used to indicate the order of the counters on the machine</description>
        <label>Counter Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OP_CreateParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OP_CupSize__c</fullName>
        <description>Indication of the size of the coffee in cc for this counter.</description>
        <label>Cup Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OP_Grammages__c</fullName>
        <description>Indication of the size of a cup in gramms  for this counter</description>
        <label>Grammages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_IsHoliday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Operating: indicates whether the task day is a holiday based on the linked business hours record</description>
        <inlineHelpText>When check the Task Start Date is on a holiday according to the linked business hours</inlineHelpText>
        <label>Is Holiday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OP_LastFreeVendingCounterReading__c</fullName>
        <description>Operating - Field coming from the Counter Reading Object</description>
        <label>Last Free Vending Counter Reading</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OP_LastPaidCounterReading__c</fullName>
        <description>Operating - Field coming from the Counter Reading Object</description>
        <label>Last Paid Counter Reading</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>